--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ The experience gained in this field with the São Paulo Museum of Art can be of 
 First published in <em>Diário de Notícias (Salvador, Bahia), </em>5 October 1958
 
 
-<marquee bgcolor="#F4F4F4" loop="-1" scrollamount="2" height="40px" width="100%">English/Hispanic</marquee>
+<marquee bgcolor="#F4F4F4" loop="-1" scrollamount="2" height="40px" width="100%">English/Other Language</marquee>
 
 
 
